Fix AUTOUPDATE tag

--- a/plugin.cfg
+++ b/plugin.cfg
@@ -30,7 +30,7 @@ FOLDER=sampleplugin_folder
 # replaced by "...". You can use blanks, uppercase/lowercase etc.
 TITLE=Sample Plugin
 
-[UPDATE]
+[AUTOUPDATE]
 # If your plugin offers automatic updates, please enable the following option.
 AUTOMATIC_UPDATES=true
 
